--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-**/config/keycloak.json
+# **/config/keycloak.json
 **/config/keycloak-saml.xml
-**/WEB-INF/keycloak.json
+**/WEB-INF/keycloak.json#
 
 # Intellij
 ###################
